--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,27 @@
 version: '3.0'
 services:
+  db:
+    build: ./db
+    ports:
+    - "5432:5432"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    healthcheck:
+      test: exit 0
   web:
-    build: .
+    build: ./
     ports:
      - "5000:5000"
     volumes:
      - .:/app
     environment:
+      - FLASK_APP=manage.py
+      - FLASK_DEBUG=1
       - APP_SETTINGS=app.config.DevelopmentConfig
+      - DATABASE_URL=postgres://postgres:postgres@db:5432/db_dev
+      - DATABASE_TEST_URL=postgres://postgres:postgres@db:5432/db_test
+    depends_on:
+      - db
+    links:
+      - db
