Added view to redirect to URL from URL key

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
-Flask
-Flask-SQLAlchemy
-Flask-Testing
-Gunicorn
-psycopg2
-validators
+click==6.7
+decorator==4.1.2
+Flask==0.12.2
+Flask-SQLAlchemy==2.2
+Flask-Testing==0.6.2
+gunicorn==19.7.1
+itsdangerous==0.24
+Jinja2==2.9.6
+MarkupSafe==1.0
+psycopg2==2.7.3.1
+six==1.11.0
+SQLAlchemy==1.1.14
+validators==0.12.0
+Werkzeug==0.12.2
